--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -44,7 +44,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "austin = pd.read_csv('../austin_weather.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Next, describe the dataset you have loaded: \n",
+    "- Look at the variables and their types\n",
+    "- Examine the descriptive statistics of the numeric variables \n",
+    "- Look at the first five rows of all variables to evaluate the categorical variables as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                          object\n",
+       "TempHighF                      int64\n",
+       "TempAvgF                       int64\n",
+       "TempLowF                       int64\n",
+       "DewPointHighF                 object\n",
+       "DewPointAvgF                  object\n",
+       "DewPointLowF                  object\n",
+       "HumidityHighPercent           object\n",
+       "HumidityAvgPercent            object\n",
+       "HumidityLowPercent            object\n",
+       "SeaLevelPressureHighInches    object\n",
+       "SeaLevelPressureAvgInches     object\n",
+       "SeaLevelPressureLowInches     object\n",
+       "VisibilityHighMiles           object\n",
+       "VisibilityAvgMiles            object\n",
+       "VisibilityLowMiles            object\n",
+       "WindHighMPH                   object\n",
+       "WindAvgMPH                    object\n",
+       "WindGustMPH                   object\n",
+       "PrecipitationSumInches        object\n",
+       "Events                        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "austin.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1319.000000</td>\n",
+       "      <td>1319.000000</td>\n",
+       "      <td>1319.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>80.862775</td>\n",
+       "      <td>70.642911</td>\n",
+       "      <td>59.902957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>14.766523</td>\n",
+       "      <td>14.045904</td>\n",
+       "      <td>14.190648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>49.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>63.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>107.000000</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>81.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         TempHighF     TempAvgF     TempLowF\n",
+       "count  1319.000000  1319.000000  1319.000000\n",
+       "mean     80.862775    70.642911    59.902957\n",
+       "std      14.766523    14.045904    14.190648\n",
+       "min      32.000000    29.000000    19.000000\n",
+       "25%      72.000000    62.000000    49.000000\n",
+       "50%      83.000000    73.000000    63.000000\n",
+       "75%      92.000000    83.000000    73.000000\n",
+       "max     107.000000    93.000000    81.000000"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "austin.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -256,51 +421,13 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "austin = pd.read_csv('../austin_weather.csv')\n",
     "austin.head()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Next, describe the dataset you have loaded: \n",
-    "- Look at the variables and their types\n",
-    "- Examine the descriptive statistics of the numeric variables \n",
-    "- Look at the first five rows of all variables to evaluate the categorical variables as well"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here\n"
    ]
   },
   {
@@ -318,9 +445,9 @@
     "\n",
     "1. There are 21 variables in the dataset. 3 of them are numeric and the rest contain some text.\n",
     "\n",
-    "2. The average temperature in Austin ranged between around 70 degrees F and around 93 degrees F. The highest temperature observed during this period was 107 degrees F and the lowest was 19 degrees F.\n",
+    "2. The average temperature in Austin is around 70 degrees F. The highest temperature observed during this period was 107 degrees F and the lowest was 19 degrees F.\n",
     "\n",
-    "3. When we look at the head function, we see that a lot of variables contain numeric data even though these columns are of object type. This means we might have to do some data cleansing.\n"
+    "3. When we look at the head function, we see that a lot of variables contain numeric data even though these columns are of object type. This means we might have to do some data cleaning.\n"
    ]
   },
   {
@@ -334,20 +461,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['49', '36', '27', '28', '40', '39', '41', '26', '42', '22', '48',\n",
+       "       '32', '8', '11', '45', '55', '61', '37', '47', '25', '23', '20',\n",
+       "       '33', '30', '29', '17', '14', '13', '54', '59', '15', '24', '34',\n",
+       "       '35', '57', '50', '53', '60', '46', '56', '51', '31', '38', '62',\n",
+       "       '43', '63', '64', '67', '66', '58', '70', '68', '65', '69', '71',\n",
+       "       '72', '-', '73', '74', '21', '44', '52', '12', '75', '76', '18'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "pd.unique(austin['DewPointAvgF'])\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your observation here\n"
+    "There is a hyphen among the numbers, so I guess that is what made Pandas treat the column as object instead of Int64\n"
    ]
   },
   {
@@ -361,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,11 +516,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/emachado/miniconda3/envs/ironhack/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-63-81d913baa976>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maustin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mwrong_type_columns\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maustin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mwrong_type_columns\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'coerce'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "austin[wrong_type_columns] = austin[wrong_type_columns].apply(lambda x: pd.to_numeric(x, errors='coerce'))"
    ]
   },
   {
@@ -390,11 +552,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                          object\n",
+       "TempHighF                      int64\n",
+       "TempAvgF                       int64\n",
+       "TempLowF                       int64\n",
+       "DewPointHighF                 object\n",
+       "DewPointAvgF                  object\n",
+       "DewPointLowF                  object\n",
+       "HumidityHighPercent           object\n",
+       "HumidityAvgPercent            object\n",
+       "HumidityLowPercent            object\n",
+       "SeaLevelPressureHighInches    object\n",
+       "SeaLevelPressureAvgInches     object\n",
+       "SeaLevelPressureLowInches     object\n",
+       "VisibilityHighMiles           object\n",
+       "VisibilityAvgMiles            object\n",
+       "VisibilityLowMiles            object\n",
+       "WindHighMPH                   object\n",
+       "WindAvgMPH                    object\n",
+       "WindGustMPH                   object\n",
+       "PrecipitationSumInches        object\n",
+       "Events                        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "austin.dtypes\n"
    ]
   },
   {
