--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "max     107.000000    93.000000    81.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,31 +516,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/emachado/miniconda3/envs/ironhack/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-63-81d913baa976>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maustin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mwrong_type_columns\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maustin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mwrong_type_columns\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'coerce'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "austin[wrong_type_columns] = austin[wrong_type_columns].apply(lambda x: pd.to_numeric(x, errors='coerce'))"
+    "austin[wrong_type_columns] = austin[wrong_type_columns].apply(pd.to_numeric, errors = \"coerce\")\n",
+    "\n"
    ]
   },
   {
@@ -552,37 +533,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Date                          object\n",
-       "TempHighF                      int64\n",
-       "TempAvgF                       int64\n",
-       "TempLowF                       int64\n",
-       "DewPointHighF                 object\n",
-       "DewPointAvgF                  object\n",
-       "DewPointLowF                  object\n",
-       "HumidityHighPercent           object\n",
-       "HumidityAvgPercent            object\n",
-       "HumidityLowPercent            object\n",
-       "SeaLevelPressureHighInches    object\n",
-       "SeaLevelPressureAvgInches     object\n",
-       "SeaLevelPressureLowInches     object\n",
-       "VisibilityHighMiles           object\n",
-       "VisibilityAvgMiles            object\n",
-       "VisibilityLowMiles            object\n",
-       "WindHighMPH                   object\n",
-       "WindAvgMPH                    object\n",
-       "WindGustMPH                   object\n",
-       "PrecipitationSumInches        object\n",
-       "Events                        object\n",
+       "Date                           object\n",
+       "TempHighF                       int64\n",
+       "TempAvgF                        int64\n",
+       "TempLowF                        int64\n",
+       "DewPointHighF                 float64\n",
+       "DewPointAvgF                  float64\n",
+       "DewPointLowF                  float64\n",
+       "HumidityHighPercent           float64\n",
+       "HumidityAvgPercent            float64\n",
+       "HumidityLowPercent            float64\n",
+       "SeaLevelPressureHighInches    float64\n",
+       "SeaLevelPressureAvgInches     float64\n",
+       "SeaLevelPressureLowInches     float64\n",
+       "VisibilityHighMiles           float64\n",
+       "VisibilityAvgMiles            float64\n",
+       "VisibilityLowMiles            float64\n",
+       "WindHighMPH                   float64\n",
+       "WindAvgMPH                    float64\n",
+       "WindGustMPH                   float64\n",
+       "PrecipitationSumInches        float64\n",
+       "Events                         object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
