--- a/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,11 +1326,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>App</th>\n",
+       "      <th>Translated_Review</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Sentiment_Polarity</th>\n",
+       "      <th>Sentiment_Subjectivity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>I like eat delicious food. That's I'm cooking ...</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.533333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>This help eating healthy exercise regular basis</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.288462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>Works great especially going grocery store</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>Best idea us</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     App                                  Translated_Review  \\\n",
+       "0  10 Best Foods for You  I like eat delicious food. That's I'm cooking ...   \n",
+       "1  10 Best Foods for You    This help eating healthy exercise regular basis   \n",
+       "2  10 Best Foods for You                                                NaN   \n",
+       "3  10 Best Foods for You         Works great especially going grocery store   \n",
+       "4  10 Best Foods for You                                       Best idea us   \n",
+       "\n",
+       "  Sentiment  Sentiment_Polarity  Sentiment_Subjectivity  \n",
+       "0  Positive                1.00                0.533333  \n",
+       "1  Positive                0.25                0.288462  \n",
+       "2       NaN                 NaN                     NaN  \n",
+       "3  Positive                0.40                0.875000  \n",
+       "4  Positive                1.00                0.300000  "
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "google_review.head()"
    ]
   },
   {
@@ -1357,11 +1452,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "review_missing_removed = google_review.dropna()"
    ]
   },
   {
@@ -1373,11 +1469,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bowmasters                                            312\n",
+       "Angry Birds Classic                                   273\n",
+       "Helix Jump                                            273\n",
+       "Calorie Counter - MyFitnessPal                        254\n",
+       "Duolingo: Learn Languages Free                        240\n",
+       "Candy Crush Saga                                      240\n",
+       "Garena Free Fire                                      222\n",
+       "8 Ball Pool                                           219\n",
+       "Calorie Counter - Macros                              200\n",
+       "10 Best Foods for You                                 194\n",
+       "CBS Sports App - Scores, News, Stats & Watch Live     192\n",
+       "Google Photos                                         191\n",
+       "Alto's Adventure                                      175\n",
+       "8fit Workouts & Meal Planner                          171\n",
+       "DRAGON BALL LEGENDS                                   167\n",
+       "Candy Crush Soda Saga                                 166\n",
+       "Clash Royale                                          165\n",
+       "Adobe Acrobat Reader                                  162\n",
+       "Episode - Choose Your Story                           160\n",
+       "Flow Free                                             154\n",
+       "Block Puzzle                                          154\n",
+       "Bubble Shooter                                        145\n",
+       "Calorie Counter - MyNetDiary                          139\n",
+       "Agar.io                                               136\n",
+       "Calorie Counter & Diet Tracker                        135\n",
+       "Cooking Fever                                         135\n",
+       "Galaxy Attack: Alien Shooter                          134\n",
+       "Colorfy: Coloring Book for Adults - Free              133\n",
+       "Gardenscapes                                          133\n",
+       "Facebook                                              132\n",
+       "                                                     ... \n",
+       "Google+                                                 2\n",
+       "Draw Your Game                                          2\n",
+       "Calculator with Percent (Free)                          2\n",
+       "Extreme Car Driving Simulator                           2\n",
+       "3D Live Neon Weed Launcher                              2\n",
+       "Calendar+ Schedule Planner App                          1\n",
+       "Draw In                                                 1\n",
+       "CallApp: Caller ID, Blocker & Phone Call Recorder       1\n",
+       "Calculator - unit converter                             1\n",
+       "DashClock Widget                                        1\n",
+       "Draw A Stickman                                         1\n",
+       "Fruit Block - Puzzle Legend                             1\n",
+       "HomeWork                                                1\n",
+       "Google Slides                                           1\n",
+       "GPS Map Free                                            1\n",
+       "Apartment Decorating Ideas                              1\n",
+       "All-in-One Mahjong 3 FREE                               1\n",
+       "Daily Workouts - Exercise Fitness Routine Trainer       1\n",
+       "Caller ID +                                             1\n",
+       "Draw a Stickman: EPIC 2                                 1\n",
+       "Bed Time Fan - White Noise Sleep Sounds                 1\n",
+       "Google Trips - Travel Planner                           1\n",
+       "Best Ovulation Tracker Fertility Calendar App Glow      1\n",
+       "Best Fiends - Free Puzzle Game                          1\n",
+       "HD Camera                                               1\n",
+       "Discover Mobile                                         1\n",
+       "Free Live Talk-Video Call                               1\n",
+       "Drawing for Kids Learning Games for Toddlers age 3      1\n",
+       "CBS News                                                1\n",
+       "Caf - Mon Compte                                        1\n",
+       "Name: App, Length: 865, dtype: int64"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "review_missing_removed['App'].value_counts()"
    ]
   },
   {
@@ -1406,13 +1575,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code below\n",
     "\n",
     "def positive_function(x):\n",
+    "    a = np.where(x=='Positive')\n",
     "    \"\"\"\n",
     "    Count how many times the string `Positive` appears in a column (exact string match).\n",
     "    \n",
@@ -1422,7 +1592,27 @@
     "    Returns:\n",
     "        The number of occurrences of `Positive` in the column data.\n",
     "    \"\"\"\n",
-    "    return 0"
+    "    return len(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23998"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positive_function(review_missing_removed['Sentiment'])"
    ]
   },
   {
@@ -1446,11 +1636,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/molins/miniconda3/envs/ironhack/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: using a dict on a Series for aggregation\n",
+      "is deprecated and will be removed in a future version\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg= review_missing_removed.groupby('App').Sentiment.agg({'Positive':positive_function,'Total':'count'})"
    ]
   },
   {
@@ -1462,11 +1663,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 Best Foods for You</th>\n",
+       "      <td>162</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</th>\n",
+       "      <td>31</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11st</th>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800 Contacts - Lens Store</th>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1LINE – One Line with One Touch</th>\n",
+       "      <td>27</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive  Total\n",
+       "App                                              \n",
+       "10 Best Foods for You                  162    194\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        31     40\n",
+       "11st                                    23     39\n",
+       "1800 Contacts - Lens Store              64     80\n",
+       "1LINE – One Line with One Touch         27     38"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "google_agg.head()"
    ]
   },
   {
@@ -1480,11 +1757,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Positive Ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 Best Foods for You</th>\n",
+       "      <td>162</td>\n",
+       "      <td>194</td>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</th>\n",
+       "      <td>31</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.775000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11st</th>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.589744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800 Contacts - Lens Store</th>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1LINE – One Line with One Touch</th>\n",
+       "      <td>27</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.710526</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive  Total  Positive Ratio\n",
+       "App                                                              \n",
+       "10 Best Foods for You                  162    194        0.835052\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        31     40        0.775000\n",
+       "11st                                    23     39        0.589744\n",
+       "1800 Contacts - Lens Store              64     80        0.800000\n",
+       "1LINE – One Line with One Touch         27     38        0.710526"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg['Positive Ratio']=google_agg['Positive']/google_agg['Total']\n",
+    "google_agg.head()"
    ]
   },
   {
@@ -1496,11 +1857,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg.drop(['Positive','Total'],axis=1,inplace=True)"
    ]
   },
   {
@@ -1514,11 +1876,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive Ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 Best Foods for You</th>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</th>\n",
+       "      <td>0.775000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11st</th>\n",
+       "      <td>0.589744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800 Contacts - Lens Store</th>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1LINE – One Line with One Touch</th>\n",
+       "      <td>0.710526</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive Ratio\n",
+       "App                                             \n",
+       "10 Best Foods for You                   0.835052\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        0.775000\n",
+       "11st                                    0.589744\n",
+       "1800 Contacts - Lens Store              0.800000\n",
+       "1LINE – One Line with One Touch         0.710526"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg.head()"
    ]
   },
   {
